# cloning-bench

./: .gitignore  LICENSE  README.md  flake.nix  prompt.txt  pyproject.toml
agents/claude/: CLAUDE.md
agents/claude/nix/: default.nix
agents/codex/: AGENTS.md
agents/codex/nix/: default.nix
agents/gemini/: GEMINI.md
agents/gemini/.gemini/: settings.json
agents/gemini/nix/: default.nix
agents/gemini/nix/policies/: discovered.toml  plan.toml  read-only.toml  write.toml  yolo.toml
agents/glm/: AGENTS.md
agents/glm/nix/: default.nix
nix/: agent-browser.nix
recordings/1/: markers.json  screenplay.json
recordings/1/screenshots/0/: manifest.json
recordings/1/screenshots/1/: manifest.json
recordings/1/screenshots/2/: manifest.json
recordings/1/screenshots/3/: dom.html  manifest.json
recordings/1/screenshots/4/: dom.html  manifest.json
recordings/1/screenshots/5/: dom.html  manifest.json
recordings/1/screenshots/6/: dom.html  manifest.json
recordings/1/screenshots/7/: dom.html  manifest.json
recordings/1/screenshots/8/: dom.html  manifest.json
recordings/2/: markers.json  screenplay.json
recordings/2/screenshots/0/: dom.html  manifest.json
recordings/2/screenshots/1/: manifest.json
recordings/2/screenshots/10/: manifest.json
recordings/2/screenshots/11/: manifest.json
recordings/2/screenshots/12/: dom.html  manifest.json
recordings/2/screenshots/13/: dom.html  manifest.json
recordings/2/screenshots/2/: manifest.json
recordings/2/screenshots/3/: manifest.json
recordings/2/screenshots/4/: manifest.json
(+53 files in other folders)
